# EDA-VSCode-Extension

./: .eslintrc.json  .gitignore  .prettierrc  README.md  package-lock.json  package.json
flask/: build_flask.sh  main.spec  pyproject.toml
flask/python-mini-server/: main.py
src/: EDAPanel.ts  SwiperPanel.ts  extension.ts  findFirstFreePort.ts  tsconfig.json  webviewApi.ts
src/compiled-fw/: main.js
svelte/: globals.d.ts  package-lock.json  tsconfig.json  vite.config.ts
svelte/src/: App.svelte  extensionApi.ts  interfaces.ts  webviewState.ts
svelte/src/Apis/: extensionApi.ts  pythonApi.ts
svelte/src/components/: Child.svelte  ServerCaller.svelte  TableView.svelte
types/: messaging.d.ts  types.d.ts
